--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django
-djangorestframework
-gunicorn
+djangorestframework==3.13.1
+gunicorn==20.1.0
 dj-database-url==0.5.0
 django-heroku==0.3.1
 whitenoise==6.0.0
